# Voice-AI-Agents

./: .gitignore  README.md  RUNNING_LOCALLY.md  START_AGENT.sh
agent-starter-python/: CLEANUP_SUMMARY.md  DATABASE_LOCATIONS.md  JUNCTION_TABLES_IMPLEMENTATION.md  LOCAL_MODELS.md  LOGGING_GUIDE.md  QUICK_START.md  SETUP_LOCAL.md  SETUP_PROVIDER_SEARCH.md  SIMPLIFIED_ARCHITECTURE.md  pyproject.toml
agent-starter-python/src/: agent.py  database.py  db_service.py  migrate_data.py
agent-starter-python/tests/: test_agent.py
vox-takehome-test/: TEST_CASES.md  TEST_CASES_SUMMARY.md  app-config.ts  verify_test_cases.py
vox-takehome-test/app/: layout.tsx
vox-takehome-test/app/(app)/: layout.tsx
vox-takehome-test/components/app/: chat-transcript.tsx  dynamic-styles.tsx  provider-card.tsx  provider-details-panel.tsx  session-view.tsx  theme-toggle.tsx  tile-layout.tsx  view-controller.tsx  welcome-view.tsx
vox-takehome-test/components/livekit/: chat-entry.tsx
vox-takehome-test/components/livekit/agent-control-bar/: agent-control-bar.tsx
vox-takehome-test/hooks/: useChatMessages.ts  useProviderData.ts  useRoom.ts
vox-takehome-test/styles/: globals.css
